# fmod-studio-mcp

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
fmod_studio_mcp/: __init__.py  __main__.py  api_spec.json  client.py  generation.py  server.py
tools/: build_spec.py
